--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,12 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TabPaises">
-
-        </activity>
-        <activity android:name=".Paises">
-
-        </activity>
+        <activity android:name=".Ecuador.Layout_Encebollado"></activity>
+        <activity android:name=".TabPaises"></activity>
+        <activity android:name=".Paises"></activity>
         <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
