--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Ecuador.Layout_Encebollado"></activity>
-        <activity android:name=".TabPaises"></activity>
-        <activity android:name=".Paises"></activity>
+        <activity android:name=".Ecuador.Layout_Hornado"></activity>
+        <activity android:name=".Ecuador.Layout_Yahuarlocro" />
+        <activity android:name=".Ecuador.Layout_Ceviche" />
+        <activity android:name=".Ecuador.Layout_Encebollado" />
+        <activity android:name=".TabPaises" />
+        <activity android:name=".Paises" />
         <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
