--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Ecuador.Layout_Hornado"></activity>
+        <activity android:name=".Peru.Tab_Peru"></activity>
+        <activity android:name=".Ecuador.Layout_Hornado" />
         <activity android:name=".Ecuador.Layout_Yahuarlocro" />
         <activity android:name=".Ecuador.Layout_Ceviche" />
         <activity android:name=".Ecuador.Layout_Encebollado" />
